exports[`test it displays its children below the title, tabs and tools. 1`] = `
<section
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
        "width": "100%",
      }
    }>
    <div
      style={Object {}}>
      <header
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "paddingTop": 15,
            "position": "relative",
          }
        }>
        <div
          style={
            Object {
              "display": "inline-flex",
              "paddingBottom": 20,
              "paddingLeft": 20,
            }
          }>
          <div
            className="ui left icon input"
            style={
              Object {
                "width": 400,
              }
            }>
            <i
              aria-hidden="true"
              className="search icon" />
            <input
              type="text" />
          </div>
          <div
            style={
              Object {
                "marginLeft": -50,
                "paddingTop": 10,
                "zIndex": 1001,
              }
            }>
            <a>
              <i
                aria-hidden="true"
                className="close icon" />
            </a>
            <a>
              <i
                aria-hidden="true"
                className="black caret down icon" />
            </a>
          </div>
          <button
            className="ui primary button"
            onClick={[Function]}
            style={
              Object {
                "marginLeft": 20,
                "width": 100,
              }
            }
            tabIndex={undefined}>
            Search
          </button>
        </div>
        <div>
          <div
            style={
              Object {
                "paddingLeft": 18,
                "width": "60%",
              }
            }>
            <h3
              style={
                Object {
                  "marginBottom": 0,
                }
              } />
            <span>
              In 
              <a>
                Operations
              </a>
               > 
              <a>
                Daily Check-sheet
              </a>
               | Department Admionistration
            </span>
          </div>
          <div
            aria-busy={undefined}
            aria-disabled={undefined}
            aria-expanded={false}
            aria-multiselectable={undefined}
            className="ui selection dropdown"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            role="listbox"
            style={
              Object {
                "backgroundColor": "green",
                "color": "white",
                "float": "right",
                "marginRight": 15,
                "marginTop": -35,
              }
            }
            tabIndex={0}>
            <select
              aria-hidden="true"
              multiple={undefined}
              name={undefined}
              type="hidden"
              value="">
              <option
                value="" />
              <option
                value="active">
                Active
              </option>
              <option
                value="in-active">
                In-Active
              </option>
              <option
                value="none">
                None
              </option>
            </select>
            <div
              className="default text">
              Status
            </div>
            <i
              aria-hidden="true"
              className="dropdown icon" />
            <div
              className="menu transition">
              <div
                aria-checked={false}
                aria-disabled={undefined}
                aria-selected={true}
                className="selected item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }>
                Active
              </div>
              <div
                aria-checked={false}
                aria-disabled={undefined}
                aria-selected={false}
                className="item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }>
                In-Active
              </div>
              <div
                aria-checked={false}
                aria-disabled={undefined}
                aria-selected={false}
                className="item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }>
                None
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }>
          <div
            className="ui secondary menu">
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="commenting icon" />
              <span>
                Comment
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="tag icon" />
              <span>
                Logbook
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="share icon" />
              <span>
                Share
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="edit icon" />
              <span>
                Edit
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="trash outline icon" />
              <span>
                Delete
              </span>
            </div>
          </div>
          <div
            className="ui tabular menu"
            style={
              Object {
                "paddingLeft": 10,
              }
            }>
            <div
              className="item"
              onClick={[Function]}>
              <a
                onClick={[Function]}
                style={Object {}}>
                Details
              </a>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <a
                onClick={[Function]}
                style={Object {}}>
                Comments
              </a>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <a
                onClick={[Function]}
                style={Object {}}>
                Activity
              </a>
            </div>
          </div>
        </div>
      </header>
    </div>
    <div
      style={
        Object {
          "MozBoxFlex": "1 0 1px",
          "WebkitBoxFlex": "1 0 1px",
          "WebkitFlex": "1 0 1px",
          "display": "flex",
          "flex": "1 0 1px",
          "flexDirection": "row",
          "msFlex": "1 0 1px",
        }
      }>
      <div
        style={
          Object {
            "position": "relative",
            "width": "100%",
          }
        }>
        <div
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }>
          <div
            style={
              Object {
                "height": "100%",
                "paddingLeft": 20,
                "paddingRight": 20,
              }
            }>
            <div>
              Test Communication
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`test it displays the given status. 1`] = `
<section
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
        "width": "100%",
      }
    }>
    <div
      style={Object {}}>
      <header
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "paddingTop": 15,
            "position": "relative",
          }
        }>
        <div
          style={
            Object {
              "display": "inline-flex",
              "paddingBottom": 20,
              "paddingLeft": 20,
            }
          }>
          <div
            className="ui left icon input"
            style={
              Object {
                "width": 400,
              }
            }>
            <i
              aria-hidden="true"
              className="search icon" />
            <input
              type="text" />
          </div>
          <div
            style={
              Object {
                "marginLeft": -50,
                "paddingTop": 10,
                "zIndex": 1001,
              }
            }>
            <a>
              <i
                aria-hidden="true"
                className="close icon" />
            </a>
            <a>
              <i
                aria-hidden="true"
                className="black caret down icon" />
            </a>
          </div>
          <button
            className="ui primary button"
            onClick={[Function]}
            style={
              Object {
                "marginLeft": 20,
                "width": 100,
              }
            }
            tabIndex={undefined}>
            Search
          </button>
        </div>
        <div>
          <div
            style={
              Object {
                "paddingLeft": 18,
                "width": "60%",
              }
            }>
            <h3
              style={
                Object {
                  "marginBottom": 0,
                }
              } />
            <span>
              In 
              <a>
                Operations
              </a>
               > 
              <a>
                Daily Check-sheet
              </a>
               | Department Admionistration
            </span>
          </div>
          <div
            aria-busy={undefined}
            aria-disabled={undefined}
            aria-expanded={false}
            aria-multiselectable={undefined}
            className="ui selection dropdown"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            role="listbox"
            style={
              Object {
                "backgroundColor": "green",
                "color": "white",
                "float": "right",
                "marginRight": 15,
                "marginTop": -35,
              }
            }
            tabIndex={0}>
            <select
              aria-hidden="true"
              multiple={undefined}
              name={undefined}
              type="hidden"
              value="active">
              <option
                value="" />
              <option
                value="active">
                Active
              </option>
              <option
                value="in-active">
                In-Active
              </option>
              <option
                value="none">
                None
              </option>
            </select>
            <div
              className="text">
              Active
            </div>
            <i
              aria-hidden="true"
              className="dropdown icon" />
            <div
              className="menu transition">
              <div
                aria-checked={true}
                aria-disabled={undefined}
                aria-selected={true}
                className="active selected item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }>
                Active
              </div>
              <div
                aria-checked={false}
                aria-disabled={undefined}
                aria-selected={false}
                className="item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }>
                In-Active
              </div>
              <div
                aria-checked={false}
                aria-disabled={undefined}
                aria-selected={false}
                className="item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }>
                None
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }>
          <div
            className="ui secondary menu">
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="commenting icon" />
              <span>
                Comment
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="tag icon" />
              <span>
                Logbook
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="share icon" />
              <span>
                Share
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="edit icon" />
              <span>
                Edit
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="trash outline icon" />
              <span>
                Delete
              </span>
            </div>
          </div>
          <div
            className="ui tabular menu"
            style={
              Object {
                "paddingLeft": 10,
              }
            }>
            <div
              className="item"
              onClick={[Function]}>
              <a
                onClick={[Function]}
                style={Object {}}>
                Details
              </a>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <a
                onClick={[Function]}
                style={Object {}}>
                Comments
              </a>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <a
                onClick={[Function]}
                style={Object {}}>
                Activity
              </a>
            </div>
          </div>
        </div>
      </header>
    </div>
    <div
      style={
        Object {
          "MozBoxFlex": "1 0 1px",
          "WebkitBoxFlex": "1 0 1px",
          "WebkitFlex": "1 0 1px",
          "display": "flex",
          "flex": "1 0 1px",
          "flexDirection": "row",
          "msFlex": "1 0 1px",
        }
      }>
      <div
        style={
          Object {
            "position": "relative",
            "width": "100%",
          }
        }>
        <div
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }>
          <div
            style={
              Object {
                "height": "100%",
                "paddingLeft": 20,
                "paddingRight": 20,
              }
            } />
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`test it displays the given status. 2`] = `
<section
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
        "width": "100%",
      }
    }>
    <div
      style={Object {}}>
      <header
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "paddingTop": 15,
            "position": "relative",
          }
        }>
        <div
          style={
            Object {
              "display": "inline-flex",
              "paddingBottom": 20,
              "paddingLeft": 20,
            }
          }>
          <div
            className="ui left icon input"
            style={
              Object {
                "width": 400,
              }
            }>
            <i
              aria-hidden="true"
              className="search icon" />
            <input
              type="text" />
          </div>
          <div
            style={
              Object {
                "marginLeft": -50,
                "paddingTop": 10,
                "zIndex": 1001,
              }
            }>
            <a>
              <i
                aria-hidden="true"
                className="close icon" />
            </a>
            <a>
              <i
                aria-hidden="true"
                className="black caret down icon" />
            </a>
          </div>
          <button
            className="ui primary button"
            onClick={[Function]}
            style={
              Object {
                "marginLeft": 20,
                "width": 100,
              }
            }
            tabIndex={undefined}>
            Search
          </button>
        </div>
        <div>
          <div
            style={
              Object {
                "paddingLeft": 18,
                "width": "60%",
              }
            }>
            <h3
              style={
                Object {
                  "marginBottom": 0,
                }
              } />
            <span>
              In 
              <a>
                Operations
              </a>
               > 
              <a>
                Daily Check-sheet
              </a>
               | Department Admionistration
            </span>
          </div>
          <div
            aria-busy={undefined}
            aria-disabled={undefined}
            aria-expanded={false}
            aria-multiselectable={undefined}
            className="ui selection dropdown"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            role="listbox"
            style={
              Object {
                "backgroundColor": "green",
                "color": "white",
                "float": "right",
                "marginRight": 15,
                "marginTop": -35,
              }
            }
            tabIndex={0}>
            <select
              aria-hidden="true"
              multiple={undefined}
              name={undefined}
              type="hidden"
              value="in-active">
              <option
                value="" />
              <option
                value="active">
                Active
              </option>
              <option
                value="in-active">
                In-Active
              </option>
              <option
                value="none">
                None
              </option>
            </select>
            <div
              className="text">
              In-Active
            </div>
            <i
              aria-hidden="true"
              className="dropdown icon" />
            <div
              className="menu transition">
              <div
                aria-checked={false}
                aria-disabled={undefined}
                aria-selected={false}
                className="item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }>
                Active
              </div>
              <div
                aria-checked={true}
                aria-disabled={undefined}
                aria-selected={true}
                className="active selected item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }>
                In-Active
              </div>
              <div
                aria-checked={false}
                aria-disabled={undefined}
                aria-selected={false}
                className="item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }>
                None
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }>
          <div
            className="ui secondary menu">
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="commenting icon" />
              <span>
                Comment
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="tag icon" />
              <span>
                Logbook
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="share icon" />
              <span>
                Share
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="edit icon" />
              <span>
                Edit
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="trash outline icon" />
              <span>
                Delete
              </span>
            </div>
          </div>
          <div
            className="ui tabular menu"
            style={
              Object {
                "paddingLeft": 10,
              }
            }>
            <div
              className="item"
              onClick={[Function]}>
              <a
                onClick={[Function]}
                style={Object {}}>
                Details
              </a>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <a
                onClick={[Function]}
                style={Object {}}>
                Comments
              </a>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <a
                onClick={[Function]}
                style={Object {}}>
                Activity
              </a>
            </div>
          </div>
        </div>
      </header>
    </div>
    <div
      style={
        Object {
          "MozBoxFlex": "1 0 1px",
          "WebkitBoxFlex": "1 0 1px",
          "WebkitFlex": "1 0 1px",
          "display": "flex",
          "flex": "1 0 1px",
          "flexDirection": "row",
          "msFlex": "1 0 1px",
        }
      }>
      <div
        style={
          Object {
            "position": "relative",
            "width": "100%",
          }
        }>
        <div
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }>
          <div
            style={
              Object {
                "height": "100%",
                "paddingLeft": 20,
                "paddingRight": 20,
              }
            } />
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`test it displays the given status. 3`] = `
<section
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
        "width": "100%",
      }
    }>
    <div
      style={Object {}}>
      <header
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "paddingTop": 15,
            "position": "relative",
          }
        }>
        <div
          style={
            Object {
              "display": "inline-flex",
              "paddingBottom": 20,
              "paddingLeft": 20,
            }
          }>
          <div
            className="ui left icon input"
            style={
              Object {
                "width": 400,
              }
            }>
            <i
              aria-hidden="true"
              className="search icon" />
            <input
              type="text" />
          </div>
          <div
            style={
              Object {
                "marginLeft": -50,
                "paddingTop": 10,
                "zIndex": 1001,
              }
            }>
            <a>
              <i
                aria-hidden="true"
                className="close icon" />
            </a>
            <a>
              <i
                aria-hidden="true"
                className="black caret down icon" />
            </a>
          </div>
          <button
            className="ui primary button"
            onClick={[Function]}
            style={
              Object {
                "marginLeft": 20,
                "width": 100,
              }
            }
            tabIndex={undefined}>
            Search
          </button>
        </div>
        <div>
          <div
            style={
              Object {
                "paddingLeft": 18,
                "width": "60%",
              }
            }>
            <h3
              style={
                Object {
                  "marginBottom": 0,
                }
              } />
            <span>
              In 
              <a>
                Operations
              </a>
               > 
              <a>
                Daily Check-sheet
              </a>
               | Department Admionistration
            </span>
          </div>
          <div
            aria-busy={undefined}
            aria-disabled={undefined}
            aria-expanded={false}
            aria-multiselectable={undefined}
            className="ui selection dropdown"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            role="listbox"
            style={
              Object {
                "backgroundColor": "green",
                "color": "white",
                "float": "right",
                "marginRight": 15,
                "marginTop": -35,
              }
            }
            tabIndex={0}>
            <select
              aria-hidden="true"
              multiple={undefined}
              name={undefined}
              type="hidden"
              value="none">
              <option
                value="" />
              <option
                value="active">
                Active
              </option>
              <option
                value="in-active">
                In-Active
              </option>
              <option
                value="none">
                None
              </option>
            </select>
            <div
              className="text">
              None
            </div>
            <i
              aria-hidden="true"
              className="dropdown icon" />
            <div
              className="menu transition">
              <div
                aria-checked={false}
                aria-disabled={undefined}
                aria-selected={false}
                className="item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }>
                Active
              </div>
              <div
                aria-checked={false}
                aria-disabled={undefined}
                aria-selected={false}
                className="item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }>
                In-Active
              </div>
              <div
                aria-checked={true}
                aria-disabled={undefined}
                aria-selected={true}
                className="active selected item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }>
                None
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }>
          <div
            className="ui secondary menu">
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="commenting icon" />
              <span>
                Comment
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="tag icon" />
              <span>
                Logbook
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="share icon" />
              <span>
                Share
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="edit icon" />
              <span>
                Edit
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="trash outline icon" />
              <span>
                Delete
              </span>
            </div>
          </div>
          <div
            className="ui tabular menu"
            style={
              Object {
                "paddingLeft": 10,
              }
            }>
            <div
              className="item"
              onClick={[Function]}>
              <a
                onClick={[Function]}
                style={Object {}}>
                Details
              </a>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <a
                onClick={[Function]}
                style={Object {}}>
                Comments
              </a>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <a
                onClick={[Function]}
                style={Object {}}>
                Activity
              </a>
            </div>
          </div>
        </div>
      </header>
    </div>
    <div
      style={
        Object {
          "MozBoxFlex": "1 0 1px",
          "WebkitBoxFlex": "1 0 1px",
          "WebkitFlex": "1 0 1px",
          "display": "flex",
          "flex": "1 0 1px",
          "flexDirection": "row",
          "msFlex": "1 0 1px",
        }
      }>
      <div
        style={
          Object {
            "position": "relative",
            "width": "100%",
          }
        }>
        <div
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }>
          <div
            style={
              Object {
                "height": "100%",
                "paddingLeft": 20,
                "paddingRight": 20,
              }
            } />
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`test it displays the given title above tabs, tools and children. 1`] = `
<section
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
        "width": "100%",
      }
    }>
    <div
      style={Object {}}>
      <header
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "paddingTop": 15,
            "position": "relative",
          }
        }>
        <div
          style={
            Object {
              "display": "inline-flex",
              "paddingBottom": 20,
              "paddingLeft": 20,
            }
          }>
          <div
            className="ui left icon input"
            style={
              Object {
                "width": 400,
              }
            }>
            <i
              aria-hidden="true"
              className="search icon" />
            <input
              type="text" />
          </div>
          <div
            style={
              Object {
                "marginLeft": -50,
                "paddingTop": 10,
                "zIndex": 1001,
              }
            }>
            <a>
              <i
                aria-hidden="true"
                className="close icon" />
            </a>
            <a>
              <i
                aria-hidden="true"
                className="black caret down icon" />
            </a>
          </div>
          <button
            className="ui primary button"
            onClick={[Function]}
            style={
              Object {
                "marginLeft": 20,
                "width": 100,
              }
            }
            tabIndex={undefined}>
            Search
          </button>
        </div>
        <div>
          <div
            style={
              Object {
                "paddingLeft": 18,
                "width": "60%",
              }
            }>
            <h3
              style={
                Object {
                  "marginBottom": 0,
                }
              }>
              Test Title
            </h3>
            <span>
              In 
              <a>
                Operations
              </a>
               > 
              <a>
                Daily Check-sheet
              </a>
               | Department Admionistration
            </span>
          </div>
          <div
            aria-busy={undefined}
            aria-disabled={undefined}
            aria-expanded={false}
            aria-multiselectable={undefined}
            className="ui selection dropdown"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            role="listbox"
            style={
              Object {
                "backgroundColor": "green",
                "color": "white",
                "float": "right",
                "marginRight": 15,
                "marginTop": -35,
              }
            }
            tabIndex={0}>
            <select
              aria-hidden="true"
              multiple={undefined}
              name={undefined}
              type="hidden"
              value="">
              <option
                value="" />
              <option
                value="active">
                Active
              </option>
              <option
                value="in-active">
                In-Active
              </option>
              <option
                value="none">
                None
              </option>
            </select>
            <div
              className="default text">
              Status
            </div>
            <i
              aria-hidden="true"
              className="dropdown icon" />
            <div
              className="menu transition">
              <div
                aria-checked={false}
                aria-disabled={undefined}
                aria-selected={true}
                className="selected item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }>
                Active
              </div>
              <div
                aria-checked={false}
                aria-disabled={undefined}
                aria-selected={false}
                className="item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }>
                In-Active
              </div>
              <div
                aria-checked={false}
                aria-disabled={undefined}
                aria-selected={false}
                className="item"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }>
                None
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "position": "relative",
            }
          }>
          <div
            className="ui secondary menu">
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="commenting icon" />
              <span>
                Comment
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="tag icon" />
              <span>
                Logbook
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="share icon" />
              <span>
                Share
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="edit icon" />
              <span>
                Edit
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <i
                aria-hidden="true"
                className="trash outline icon" />
              <span>
                Delete
              </span>
            </div>
          </div>
          <div
            className="ui tabular menu"
            style={
              Object {
                "paddingLeft": 10,
              }
            }>
            <div
              className="item"
              onClick={[Function]}>
              <a
                onClick={[Function]}
                style={Object {}}>
                Details
              </a>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <a
                onClick={[Function]}
                style={Object {}}>
                Comments
              </a>
            </div>
            <div
              className="item"
              onClick={[Function]}>
              <a
                onClick={[Function]}
                style={Object {}}>
                Activity
              </a>
            </div>
          </div>
        </div>
      </header>
    </div>
    <div
      style={
        Object {
          "MozBoxFlex": "1 0 1px",
          "WebkitBoxFlex": "1 0 1px",
          "WebkitFlex": "1 0 1px",
          "display": "flex",
          "flex": "1 0 1px",
          "flexDirection": "row",
          "msFlex": "1 0 1px",
        }
      }>
      <div
        style={
          Object {
            "position": "relative",
            "width": "100%",
          }
        }>
        <div
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }>
          <div
            style={
              Object {
                "height": "100%",
                "paddingLeft": 20,
                "paddingRight": 20,
              }
            }>
            <div>
              Test Communication
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;
